Fix vertical align of text

--- a/data/css/main.css
+++ b/data/css/main.css
@@ -2,5 +2,5 @@
 div {
   display: inline;
   cursor: default;
-  vertical-align: middle;
+  line-height: 2px;  
 }
